--- a/04-Working-with-Unix.Rmd
+++ b/04-Working-with-Unix.Rmd
@@ -32,7 +32,7 @@ The controls for navigating `man` pages are the same as they are for `less`.
 I often use `man` pages for quickly searching for an option that I've forgotten.
 Let's say that I forgot how to get `ls` to print a long list. After typing
 `man ls` to open the page, type `/` in order to start a search. Then type the
-word or phrase that you're searching for, in this case type in `long list` and
+word or phrase that you're searching for. In this case, type in `long list`, and
 then press `Enter`. The page jumps to this entry:
 
 ```
@@ -43,14 +43,14 @@ then press `Enter`. The page jumps to this entry:
 
 Press the `n` key in order to search for the next occurrence of the word, and if
 you want to go to the previous occurrence type `Shift` + `n`. This method of
-searching also works with `less`. When you're finished looking at a `man` page
+searching also works with `less`. When you're finished looking at a `man` page,
 type `q` to get back to the prompt.
 
 The `man` command works wonderfully when you know which command you want to look
 up, but what if you've forgotten the name of the command you're looking for? You
 can use `apropos` to search all of the available commands and their
-descriptions. For example let's pretend that I forgot the name of my favorite
-command line text editor. You could type `apropos editor` into the command line
+descriptions. For example, let's pretend that I forgot the name of my favorite
+command line text editor. You could type `apropos editor` into the command line,
 which will print a list of results:
 
 ```{r, engine='bash', eval=FALSE}
@@ -64,15 +64,15 @@ apropos editor
 ## vim(1)                   - Vi IMproved, a programmers text editor
 ```
 
-The second result is `nano` which was just on the tip of my tongue! Both `man`
+The second result is `nano`, which was just on the tip of my tongue! Both `man`
 and `apropos` are useful when a search is only a few keystrokes away, but if 
-you're looking for detailed examples and explanations you're better off using 
+you're looking for detailed examples and explanations, you're better off using 
 a search engine if you have access to a web browser.
 
 ### Summary
 
 - Use `man` to look up the documentation for a command.
-- If you can't think of the name of a command use `apropos` to search for a word
+- If you can't think of the name of a command, use `apropos` to search for a word
 associated with that command.
 - If you have access to a web browser, using a search engine might be better
 than `man` or `apropos`.
@@ -129,16 +129,16 @@ ls
 I've just been dumping pictures and figures into this folder without organizing
 them at all! Thankfully (in the words of Dr. Jenny Bryan) [I have an unwavering 
 commitment to the ISO 8601 date
-standard](https://twitter.com/JennyBryan/status/816143967695687684) so at least
+standard](https://twitter.com/JennyBryan/status/816143967695687684), so at least
 I know when these photos were taken. Instead of using `mv` to move around each
-individual photo I can select groups of photos using the `*` wildcard. A 
+individual photo, I can select groups of photos using the `*` wildcard. A 
 **wildcard** is a character that represents other characters, much like how
 joker in a deck of cards can represent other cards in the deck. Wildcards are
 a subset of metacharacters, a topic which we will discuss in detail later on in
 this chapter. The `*` ("star") wildcard represents *zero or more of any
 character*, and it can be used to match names of files and folders in the 
-command line. For example if I wanted to list all of the files in my Photos 
-directory which have a name that starts with "2017" I could do the following:
+command line. For example, if I wanted to list all of the files in my Photos 
+directory whose names start with "2017", I could do the following:
 
 ```{r, engine='bash', eval=FALSE}
 ls 2017*
@@ -153,7 +153,7 @@ ls 2017*
 
 Only the files starting with "2017" are listed! The command `ls 2017*` literally
 means: list the files that start with "2017" followed by zero or more of any
-character. As you can imagine using wildcards is a powerful tool for working 
+character. As you can imagine, using wildcards is a powerful tool for working 
 with groups of files that are similarly named.
 
 Let's walk through a few other examples of using the star wildcard. We could
@@ -186,7 +186,7 @@ ls *.jpg
 ## 2017-02-10-hiking02.jpg
 ```
 
-In the case above the file name can start with a sequence of zero or more of 
+In the case above, the file name can start with a sequence of zero or more of 
 any character, but the file name must end in `.jpg`.
 Or we could also list only the first photos from each set of photos:
 
@@ -204,8 +204,8 @@ ls *01.*
 All of the files above have names that are composed of a sequence of characters,
 followed by the adjacent characters `01.`, followed by another sequence of
 characters.
-Notice that if I had entered `ls *01*` into the console every file would have
-been listed since `01` is a part of all of the file names in my Photos
+Notice that if I had entered `ls *01*` into the console, every file would have
+been listed, since `01` is a part of all of the file names in my Photos
 directory.
 
 Let's organize these photos by year. First let's create one directory for
@@ -272,7 +272,7 @@ ls 2017/
 ## 2017-02-10-hiking02.jpg
 ```
 
-Looks good! There are a few more wildcards beyond the star wildcard which we'll
+Looks good! There are a few more wildcards beyond the star wildcard, which we'll
 discuss in the next section where searching file names gets a little more
 advanced.
 
@@ -298,7 +298,7 @@ science course and the pictures I took in the lab into their own folders?
 
 The ability to search through files and folders can greatly improve your
 productivity using Unix. First we'll cover searching through text files.
-I recently downloaded a list of the names of the states in the US which you
+I recently downloaded a list of the names of the states in the US, which you
 can find [here](http://seankross.com/notes/states.txt). Let's take a look at 
 this file:
 
@@ -353,7 +353,7 @@ another string.
 
 One of the most popular tools for searching through text files is `grep`. The
 simplest use of `grep` requires two arguments: a regular expression and a text
-file to search. Let's see a simple example of `grep` in action and then I'll
+file to search. Let's see a simple example of `grep` in action, and then I'll
 explain how it works:
 
 ```{r, engine='bash', eval=FALSE}
@@ -368,7 +368,7 @@ grep "x" states.txt
 In the command above, the first argument to `grep` is the regular expression
 `"x"`. The `"x"` regular expression represents one instance of the letter "x".
 Every line of the `states.txt` file that contains at least one instance of the
-letter "x" is printed to the console. As you can see New Mexico and Texas are
+letter "x" is printed to the console. As you can see, New Mexico and Texas are
 the only two state names that contain the letter "x". Let's try searching for 
 the letter "q" in all of the state names using `grep`:
 
@@ -378,7 +378,7 @@ grep "q" states.txt
 
 Nothing is printed to the console because the letter "q" isn't in any of the
 state names. We can search for more than individual characters though. For
-example the following command will search for the state names that contain the
+example, the following command will search for the state names that contain the
 word "New":
 
 ```{r, engine='bash', eval=FALSE}
@@ -392,10 +392,10 @@ grep "New" states.txt
 ## New York
 ```
 
-In the previous case the regular expression we used was simply `"New"`, which
+In the previous case, the regular expression we used was simply `"New"`, which
 represents an occurrence of the string "New". Regular expressions are not
-limited to just being individual characters or words, they can also represent
-parts of words. For example I could search all of the state names that contain
+limited to just being individual characters or words; they can also represent
+parts of words. For example, I could search all of the state names that contain
 the string "nia" with the following command:
 
 ```{r, engine='bash', eval=FALSE}
@@ -414,14 +414,14 @@ All of the state names above happen to end with the string "nia".
 ### Metacharacters
 
 Regular expressions aren't just limited to searching with characters and
-strings, the real power of regular expressions come from using
+strings; the real power of regular expressions come from using
 **metacharacters**. Remember that metacharacters are characters that can be used
-to represent other characters. To take full advantage of all of the metacharacters
+to represent other characters. To take full advantage of all of the metacharacters,
 we should use `grep`'s cousin `egrep`, which just extends `grep`'s capabilities.
-If you're using Ubuntu you should use `grep -P` instead of `egrep` for results
-that are consistent with this chapter.
+(If you're using Ubuntu, you should use `grep -P` instead of `egrep` for results
+that are consistent with this chapter.)
 The first metacharacter we should discuss is the `"."` (period) metacharacter, 
-which represents *any* character. If for example I wanted to search `states.txt` 
+which represents *any* character. If, for example, I wanted to search `states.txt` 
 for the character "i", followed by any character, followed by the character "g" 
 I could do so with the following command:
 
@@ -439,16 +439,16 @@ egrep "i.g" states.txt
 The regular expression "i.g" matches the sub-string "irg" in V*irg*inia, and
 West V*irg*inia, and it matches the sub-string "ing" in Wash*ing*ton and
 Wyom*ing*. The period metacharacter is a stand-in for the "r" in "irg" and the
-"n" in "ing" in the example above. The period metacharacter is extremely liberal,
-for example the command `egrep "." states.txt` would return every line of
+"n" in "ing" in the example above. The period metacharacter is extremely liberal. 
+For example, the command `egrep "." states.txt` would return every line of
 states.txt since the regular expression `"."` would match one occurrence of any
 character on every line (there's at least one character on every line). 
 
-Besides characters that can represent other
-characters, there are also metacharacters called **quantifiers** which allow you
-to specify the number of times a particular regular expression should appear in 
-a string. One of the most basic quantifiers is `"+"` (plus) which represents one 
-or more occurrences of the proceeding expression. For example the regular 
+Besides characters that can represent other characters, there are also 
+metacharacters called **quantifiers**, which allow you to specify the number of times
+a particular regular expression should appear in a string.
+One of the most basic quantifiers is `"+"` (plus), which represents one 
+or more occurrences of the proceeding expression. For example, the regular 
 expression "s+as" means: one or more "s" followed by "as". Let's see if any of 
 the state names match this expression:
 
@@ -462,7 +462,7 @@ egrep "s+as" states.txt
 ```
 
 Both Arkan*sas* and Kan*sas* match the regular expression `"s+as"`. Besides the
-plus metacharacter there's also the `"*"` (star) metacharacter which represents
+plus metacharacter, there's also the `"*"` (star) metacharacter, which represents
 zero or more occurrences of the preceding expression. Let's see what happens if
 we change `"s+as"` to `"s*as"`:
 
@@ -480,11 +480,11 @@ egrep "s*as" states.txt
 ## Washington
 ```
 
-As you can see the star metacharacter is much more liberal with respect to
-matching since many more state names are matched by `"s*as"`. There are more
-specific quantifies you can use beyond "zero or more" or "one or more"
+As you can see, the star metacharacter is much more liberal with respect to
+matching, since many more state names are matched by `"s*as"`. There are more
+specific quantifiers you can use beyond "zero or more" or "one or more"
 occurrences of an expression. You can use curly brackets (`{ }`) to specify an
-exact number of occurrences of an expression. For example the regular expression
+exact number of occurrences of an expression. For example, the regular expression
 `"s{2}"` specifies exactly two occurrences of the character "s". Let's try using
 this regular expression:
 
@@ -520,9 +520,9 @@ repeated three times.
 
 You can use a **capturing group** in order to search for multiple occurrences of
 a string. You can create capturing groups within regular expressions by using
-parentheses (`"( )"`). For example if I wanted to search states.txt for the
-string "iss" occurring twice in a state name I could use a capturing group and
-a quantifier like so:
+parentheses (`"( )"`). For example, if I wanted to search states.txt for the
+string "iss" occurring twice in a state name, I could use a capturing group and
+a quantifier:
 
 ```{r, engine='bash', eval=FALSE}
 egrep "(iss){2}" states.txt
@@ -548,7 +548,7 @@ The complex regular expression above still only matches "Mississippi".
 
 ### Character Sets
 
-For the next couple of examples we're going to need some text data beyond the
+For the next couple of examples, we're going to need some text data beyond the
 names of the states. Let's just create a short text file from the console:
 
 ```{r, engine='bash', eval=FALSE}
@@ -565,9 +565,9 @@ echo "http://www.jhsph.edu/" >> small.txt
 echo "#%&-=***=-&%#" >> small.txt
 ```
 
-In addition to quantifiers there are also regular expressions for describing
+In addition to quantifiers, there are also regular expressions for describing
 sets of characters. The `\w` metacharacter corresponds to all "word" characters,
-the `\d` metacharacter corresponds to all "number" characters, and the `\s`
+the `\d` metacharacter corresponds to all "digit" (number) characters, and the `\s`
 metacharacter corresponds to all "space" characters. Let's take a look at using
 each of these metacharacters on small.txt:
 
@@ -636,9 +636,9 @@ The returned strings all contain non-word characters. Note the difference betwee
 the results of using the invert flag `-v` versus using an inverse set regular
 expression.
 
-In addition to general character sets we can also create specific character
+In addition to general character sets, we can also create specific character
 sets using square brackets (`[ ]`) and then including the characters we wish to
-match in the square brackets. For example the regular expression for the set
+match in the square brackets. For example, the regular expression for the set
 of vowels is `[aeiou]`. You can also create a regular expression for the
 complement of a set by including a caret (`^`) in the beginning of a set. For
 example the regular expression `[^aeiou]` matches all characters that are not
@@ -657,7 +657,7 @@ egrep "[aeiou]" small.txt
 ```
 
 Notice that the word "rhythms" does not appear in the result (it's the longest
-word without any vowels that I could think of).
+word without any vowel letters that I could think of).
 
 ```{r, engine='bash', eval=FALSE}
 egrep "[^aeiou]" small.txt
@@ -677,12 +677,12 @@ egrep "[^aeiou]" small.txt
 ```
 
 Every line in the file is printed, because every line contains at least one
-non-vowel! If you want to specify a range of characters you can use a hyphen
-(`-`) inside of the square brackets. For example the regular expression `[e-q]`
+non-vowel! If you want to specify a range of characters, you can use a hyphen
+(`-`) inside of the square brackets. For example, the regular expression `[e-q]`
 matches all of the lowercase letters between "e" and "q" in the alphabet
 inclusively. Case matters when you're specifying character sets, so if you
-wanted to only match uppercase characters you'd need to use `[E-Q]`. To ignore
-the case of your match you could combine the character sets with the `[e-qE-Q]`
+wanted to only match uppercase characters, you'd need to use `[E-Q]`. To ignore
+the case of your match, you could combine the character sets with the `[e-qE-Q]`
 regex (short for regular expression), or you could use the `-i` flag with `grep`
 to **i**gnore the case. Note that the `-i` flag will work for any provided regular
 expression, not just character sets. Let's take a look at some examples using
@@ -746,9 +746,9 @@ egrep "\." small.txt
 ```
 
 There are three more metacharacters that we should discuss, and two of them come
-as a pair: the caret (`^`), which represents the start of a line, and the dollar
-sign (`$`) which represents the end of line. These "anchor characters" only
-match the beginning and ends of lines when coupled with other regular
+as a pair: the caret (`^`), which represents the start of a line; and the dollar
+sign (`$`), which represents the end of line. These "anchor characters" only
+match the beginnings and ends of lines when coupled with other regular
 expressions. For example, going back to looking at states.txt, I could search
 for all of the state names that begin with "M" with the following command:
 
@@ -784,7 +784,7 @@ egrep "s$" states.txt
 There's a mnemonic that I love for remembering which metacharacter to use for
 each anchor: "First you get the **power**, then you get the **money**." The
 caret character is used for exponentiation in many programming languages, so
-"power" (`^`) is used for the beginning of a line and "money" (`$`) is used for
+"power" (`^`) is used for the beginning of a line, while "money" (`$`) is used for
 the end of a line.
 
 Finally, let's talk about the "or" metacharacter (`|`), which is also called the
@@ -865,7 +865,7 @@ egrep "^[AEIOU]{1}.+[aeiou]{1}$" states.txt
 ## Oklahoma
 ```
 
-I know there a many metacharacters to keep track of here so below I've included
+I know there are many metacharacters to keep track of here, so below I've included
 a table with several of the metacharacters we've discussed in this chapter:
 
 | Metacharacter |               Meaning                |
@@ -891,18 +891,18 @@ a table with several of the metacharacters we've discussed in this chapter:
 |    {4, 6}     |     Between 4 and 6 of Previous      |
 |     {4, }     |        4 or more of Previous         |
 
-If you want to experiment with writing regular expressions before you use them
+If you want to experiment with writing regular expressions before you use them,
 I highly recommend playing around with http://regexr.com/.
 
 ### `find`
 
-If you want to find the location of a file or the location of a group of files
+If you want to find the location of a file or the location of a group of files,
 you can use the `find` command. This command has a specific structure where
 the first argument is the directory where you want to begin the search, and all
 directories contained within that directory will also be searched. The first
 argument is then followed by a flag that describes the method you want to use to
 search. In this case we'll only be searching for a file by its name, so we'll
-use the `-name` flag. The `-name` flag itself then takes an argument, the name
+use the `-name` flag. The `-name` flag itself then takes an argument, namely the name
 of the file that you're looking for. Let's go back to the home directory and
 look for some files from there:
 
@@ -953,7 +953,7 @@ characters.
 ### Exercises
 
 1. Search `states.txt` and `canada.txt` for lines that contain the word "New".
-2. Make five text files containing the names of states that don't contain one of
+2. Make five text files with the names of states that don't contain one of
 each of the five vowels.
 3. Download the GitHub repository for this book and find out how many `.html` 
 files it contains.
@@ -962,7 +962,7 @@ files it contains.
 
 ### History
 
-Near the start of this book we discussed how you can browse the commands
+Near the start of this book, we discussed how you can browse the commands
 that you recently entered into the prompt using the `Up` and `Down` arrow keys.
 Bash keeps track of all of your recent commands, and you can browse your command
 history two different ways. The commands that we've used since opening our
@@ -988,8 +988,8 @@ history
 ## 59 history
 ```
 
-We've had our terminal open for a while so there are tons of commands in our
-history! Whenever we close a terminal our recent commands are written to the
+We've had our terminal open for a while, so there are tons of commands in our
+history! Whenever we close a terminal, our recent commands are written to the
 `~/.bash_history` file. Let's a take a look at the beginning of this file:
 
 ```{r, engine='bash', eval=FALSE}
@@ -1032,11 +1032,11 @@ alias edbp='nano ~/.bash_profile'
 ```
 
 The first `alias` creates a new command `docs`. Now entering `docs` into the
-command line is the equivalent of entering `cd ~/Documents` into the comamnd
+command line is the equivalent of entering `cd ~/Documents` into the command
 line. Let's edit our `~/.bash_profile` with `nano`. If there's anything
-in your `~/.bash_profile` already then start adding lines at the end of the
+in your `~/.bash_profile` already, then start adding lines at the end of the
 file. Add the line `alias docs='cd ~/Documents'`, then save the file and quit
-`nano`. In order to make the changes to our `~/.bash_profile` take effect we
+`nano`. In order to make the changes to our `~/.bash_profile` take effect, we
 need to run `source ~/.bash_profile` in the console:
 
 ```{r, engine='bash', eval=FALSE}
@@ -1056,12 +1056,12 @@ pwd
 
 It works! Setting different `alias`es allows you to save time if there are long
 commands that you use often. In the example `~/.bash_profile` above, the second
-line, `alias edbp='nano ~/.bash_profile'` creates the command `edbp` (**ed**it
+line, `alias edbp='nano ~/.bash_profile'`, creates the command `edbp` (**ed**it
 **b**ash **p**rofile) so that you can quickly add `alias`es. Try adding it to
 your `~/.bash_profile` and take your new command for a spin!
 
 There are a few other details about the `~/.bash_profile` that are important
-when you're writing software which we'll discuss in the Bash Programming
+when you're writing software, which we'll discuss in the Bash Programming
 chapter.
 
 ### Summary
@@ -1085,7 +1085,7 @@ head -n 4 states.txt > four.txt
 head -n 6 states.txt > six.txt
 ```
 
-If we want to look at which lines in these files are different we can use the
+If we want to look at which lines in these files are different, we can use the
 `diff` command:
 
 ```{r, engine='bash', eval=FALSE}
@@ -1114,14 +1114,14 @@ sdiff four.txt six.txt
 ##                    > Colorado
 ```
 
-In a common situation you might be sent a file, or you might download a file from the 
+In a common situation, you might be sent a file, or you might download a file from the 
 internet that comes with code known as a **checksum** or a **hash**. Hashing
 programs generate a unique code based on the contents of a file. People
 distribute hashes with files so that we can be sure that the file we think
-we've downloaded is the genuine file. One way we can prevent malicious
+we've downloaded is genuine. One way we can prevent malicious
 individuals from sending us harmful files is to check to make sure the computed
 hash matches the provided hash. 
-There are a few commonly used file hashes but we'll talk about two called MD5
+There are a few commonly used file hashes, but we'll talk about two called MD5
 and SHA-1.
 
 Since hashes are generated based on file contents, then two identical files
@@ -1131,7 +1131,8 @@ should have the same hash. Let's test this by making a copy of `states.txt`.
 cp states.txt states_copy.txt
 ```
 
-To compute the MD5 hash of a file we can use the `md5` command:
+To compute the MD5 hash of a file, we can use the `md5` command (or `md5sum` on Ubuntu
+for Windows):
 
 ```{r, engine='bash', eval=FALSE}
 md5 states.txt
@@ -1149,7 +1150,7 @@ md5 states_copy.txt
 ## MD5 (states_copy.txt) = 8d7dd71ff51614e69339b03bd1cb86ac
 ```
 
-As we expected they're the same! We can compute the SHA-1 hash using the
+As we expected, they're the same! We can compute the SHA-1 hash using the
 `shasum` command:
 
 ```{r, engine='bash', eval=FALSE}
@@ -1190,7 +1191,7 @@ shasum states_copy.txt
 ## Pipes
 
 One of the most powerful features of the command line is skilled use of the
-**pipe** (`|`) which you can usually find above the backslash (`\`) on your
+**pipe** (`|`), which you can usually find above the backslash (`\`) on your
 keyboard. The pipe allows us to take the output of a command, which would
 normally be printed to the console, and use it as the input to another command.
 It's like fitting an actual pipe between the end of one program and connecting
@@ -1235,7 +1236,7 @@ Ontario
 British Columbia
 ```
 
-Notice that this is the same result we would get from `head -n 5 canada.txt`,
+Notice that this is the same result we would get from `head -n 5 canada.txt`;
 we just used `cat` to illustrate how the pipe works. The general syntax of the
 pipe is 
 `[program that produces output] | [program that uses pipe output as input instead of a file]`.
@@ -1255,7 +1256,7 @@ grep "[aeiou]$" states.txt | wc -l
 
 The pipe can also be used multiple times in one command in order to take
 the output from one piped command and use it as the input to yet another program!
-For example we could use three pipes with `ls`, `grep`, and `less` so that we
+For example, we could use three pipes with `ls`, `grep`, and `less`, so that we
 could scroll through the files in our current directory that were created in February:
 
 ```{r, engine='bash', eval=FALSE}
@@ -1283,13 +1284,13 @@ commands).
 ## Make
 
 Once upon a time there were no web browsers, file browsers, start menus, or
-search bars. When somebody booted up a computer all they got a was a shell
-prompt, and all of the work they did started from that prompt. Back then people
+search bars. When somebody booted up a computer, all they got a was a shell
+prompt, and all of the work they did started from that prompt. Back then, people
 still loved to share software, but there was always the problem of how software
 should be installed. The `make` program is the best attempt at solving this
 problem, and `make`'s elegance has carried it so far that it is still in wide
-use today. The guiding design goal of `make` is that in order to
-install some new piece of software one would:
+use today. The guiding design goal of `make` is that, in order to
+install some new piece of software, one would:
 
 1. Download all of the files required for installation into a directory.
 2. `cd` into that directory.
@@ -1298,7 +1299,7 @@ install some new piece of software one would:
 This is accomplished by specifying a file called `makefile`, which describes the
 relationships between different files and programs. In addition to installing
 programs, `make` is also useful for creating documents automatically. Let's build
-up a `makefile` that creates a `readme.txt` file which is automatically
+up a `makefile` that creates a `readme.txt` file automatically
 populated with some information about our current directory.
 
 Let's start by creating a very basic `makefile` with `nano`:
@@ -1321,10 +1322,10 @@ following general format:
   [commands...]
 ```
 
-In the simple example we created `draft_journal_entry.txt` is the **target**, a
-file which is created as the result of the **command(s)**. It's very important
+In the simple example we created, `draft_journal_entry.txt` is the **target**, a
+file that is created as the result of the **command(s)**. It's very important
 to note that any commands under a target **must be indented with a `Tab`**. If
-we don't use `Tab`s to indent the commands then `make` will fail.
+we don't use `Tab`s to indent the commands, then `make` will fail.
 Let's save and close the `makefile`, then we can run the following in the
 console:
 
@@ -1368,14 +1369,14 @@ make draft_journal_entry.txt
 ## make: 'draft_journal_entry.txt' is up to date.
 ```
 
-Since the target file already exists no action is taken, and instead we're
+Since the target file already exists, no action is taken, and instead we're
 informed that the rule for `draft_journal_entry.txt` is "up to date" (there's
 nothing to be done).
 
 If we look at the general rule format we previously sketched out, we can see
 that we didn't specify any dependencies for this rule. A **dependency** is a
 file that the target depends on in order to be built. If a dependency has
-been updated since the last time `make` was run for a target then the target is
+been updated since the last time `make` was run for a target, then the target is
 not "up to date." This means that the commands for that target will be run the
 next time `make` is run for that target. This way, the changes to the dependency
 are incorporated into the target. The commands are only run when the dependencies
@@ -1442,8 +1443,8 @@ make readme.txt
 
 You guessed it: nothing happened! Since the `readme.txt` file still exists and
 no changes were made to any of the dependencies for `readme.txt` (`toc.txt` is
-the only dependency) `make` doesn't run the commands for the `readme.txt` rule.
-Now let's modify `toc.txt` then we'll try running `make` again.
+the only dependency), `make` doesn't run the commands for the `readme.txt` rule.
+Now let's modify `toc.txt`, then we'll try running `make` again.
 
 ```{r, engine='bash', eval=FALSE}
 echo "2. 2017-06-16-IQSS-Talk" >> toc.txt
@@ -1471,7 +1472,7 @@ It looks like `make` successfully updated `readme.txt`! With every change to
 
 In order to simplify the `make` experience, we can create a rule at the top of
 our `makefile` called `all` where we can list all of the files that are built
-by the `makefile`. By adding the `all` target we can simply run `make` without
+by the `makefile`. By adding the `all` target, we can simply run `make` without
 any arguments in order to build all of the targets in the `makefile`. Let's 
 open up `nano` and add this rule:
 
@@ -1490,8 +1491,8 @@ readme.txt: toc.txt
   wc -l toc.txt | egrep -o "[0-9]+" >> readme.txt
 ```
 
-While we have `nano` open let's add another special rule at the end of our
-`makefile` called `clean` which destroys the files created by our `makefile`:
+While we have `nano` open, let's add another special rule at the end of our
+`makefile` called `clean`, which destroys the files created by our `makefile`:
 
 ```
 all: draft_journal_entry.txt readme.txt
@@ -1508,7 +1509,7 @@ clean:
   rm readme.txt
 ```
 
-Let's save and close our `makefile` then let's test it out.  First let's clean up
+Let's save and close our `makefile`, then let's test it out. First, let's clean up
 our repository:
 
 ```{r, engine='bash', eval=FALSE}
@@ -1539,8 +1540,8 @@ ls
 ```
 
 Looks like our `makefile` works! The `make` command is extremely powerful, and
-this section is meant to just be an introduction. For more in-depth reading
-about `make` I recommend [Karl Broman](https://twitter.com/kwbroman)'s
+this section is meant to be just an introduction. For more in-depth reading
+about `make`, I recommend [Karl Broman](https://twitter.com/kwbroman)'s
 [tutorial](http://kbroman.org/minimal_make/) or 
 [Chase Lambert](http://chaselambda.com)'s
 [makefiletutorial.com](http://makefiletutorial.com).
